# CustomNN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
NueralNetwork/include/: matrix.h  nueralnetwork.h
NueralNetwork/src/: .main.cpp.swm  .main.cpp.swn  .main.cpp.swo  main.cpp  matrix.cpp  nueralnetwork.cpp
include/: Conv2DLayer.h  Layer.h  LinearLayer.h  MNISTLabel.h  ReLuLayer.h  SigmoidLayer.h  SoftmaxLayer.h  Timer.h  matrix.h  nueral_network.h  py_net.h
src/: Conv2DLayer.cpp  LinearLayer.cpp  MNISTLabel.cpp  ReLuLayer.cpp  SigmoidLayer.cpp  SoftmaxLayer.cpp  Timer.cpp  matrix.cpp  nueral_network.cpp  py_net.cpp
